--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "get-youtube-id": "^1.0.0",
     "jimp": "^0.2.28",
     "moment": "^2.22.1",
+    "figlet": "^1.2.1",
     "ms": "^2.1.1",
     "google-translate-api": "^2.3.0", 
     "opusscript": "0.0.6",
